# claude-session-analytics

./: .gitignore  .parallel-context.md  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: SCHEMA.md  event-bus-integration.md
scripts/: install-cli.sh  install-launchagent.sh  uninstall-cli.sh  uninstall-launchagent.sh
src/session_analytics/: __init__.py  bus_ingest.py  cli.py  guide.md  ingest.py  patterns.py  queries.py  server.py  storage.py
tests/: conftest.py  test_cli.py  test_ingest.py  test_patterns.py  test_queries.py  test_server.py  test_smoke_real_data.py  test_storage.py
