[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-analytics"
version = "0.1.0"
description = "Queryable analytics for Claude Code session logs, exposed as an MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Evan Senter" }
]
keywords = ["mcp", "claude", "analytics", "session-logs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
session-analytics = "session_analytics.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/session_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
